--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
+    "slick-carousel": "^1.8.1",
     "typed.js": "^2.0.10"
   },
   "devDependencies": {
